[package]
name = "stm32-serprog"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
embedded-hal = "0.2.7"
nb = "1.0"

[dependencies.stm32f1xx-hal]
version = "0.10"
features = ["stm32f103", "rt", "medium"]

[dependencies.usb-device]
version = "0.3"

[dependencies.usbd-serial]
version = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = true

[profile.dev]
opt-level = 1
